[tool.poetry]
name = "xcpcio-board-spider"
version = "0.0.80"
description = "XCPCIO Board Spider"
authors = ["Dup4 <lyuzhi.pan@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
pyexecjs = "^1.5.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
html5lib = "^1.1"
xlrd = "^2.0.1"
domjudge-utility = "^0.0.22"
xmltodict = "^0.13.0"
asyncio = "^3.4.3"
aiohttp = "^3.10.5"
aiodns = "^3.2.0"
brotli = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
pyright = "^1.1.305"
autopep8 = "^2.0.2"
pytest-snapshot = "^0.9.0"
poetry-bumpversion = "^0.3.0"
ipykernel = "^6.29.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["xcpcio_board_spider/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
